; ModuleID = '/home/carl/AnghaBench/arduino-esp32/cores/esp32/extr_esp32-hal-adc.c___analogSetClockDiv.c'
source_filename = "/home/carl/AnghaBench/arduino-esp32/cores/esp32/extr_esp32-hal-adc.c___analogSetClockDiv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__analogClockDiv = common dso_local global i64 0, align 8
@SENS_SAR_READ_CTRL_REG = common dso_local global i32 0, align 4
@SENS_SAR1_CLK_DIV = common dso_local global i32 0, align 4
@SENS_SAR1_CLK_DIV_S = common dso_local global i32 0, align 4
@SENS_SAR_READ_CTRL2_REG = common dso_local global i32 0, align 4
@SENS_SAR2_CLK_DIV = common dso_local global i32 0, align 4
@SENS_SAR2_CLK_DIV_S = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__analogSetClockDiv(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %18

6:                                                ; preds = %1
  %7 = load i64, i64* %2, align 8
  store i64 %7, i64* @__analogClockDiv, align 8
  %8 = load i32, i32* @SENS_SAR_READ_CTRL_REG, align 4
  %9 = load i32, i32* @SENS_SAR1_CLK_DIV, align 4
  %10 = load i64, i64* @__analogClockDiv, align 8
  %11 = load i32, i32* @SENS_SAR1_CLK_DIV_S, align 4
  %12 = call i32 @SET_PERI_REG_BITS(i32 %8, i32 %9, i64 %10, i32 %11)
  %13 = load i32, i32* @SENS_SAR_READ_CTRL2_REG, align 4
  %14 = load i32, i32* @SENS_SAR2_CLK_DIV, align 4
  %15 = load i64, i64* @__analogClockDiv, align 8
  %16 = load i32, i32* @SENS_SAR2_CLK_DIV_S, align 4
  %17 = call i32 @SET_PERI_REG_BITS(i32 %13, i32 %14, i64 %15, i32 %16)
  br label %18

18:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @SET_PERI_REG_BITS(i32, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
